@@ -40,9 +40,42 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>8</maven.compiler.source>
+
+        <okhttp.version>4.9.2</okhttp.version>
+        <apache.http.client.version>5.1.1</apache.http.client.version>
+        <jetty.client.version>11.0.7</jetty.client.version>
+        <vertx.version>4.1.5</vertx.version>
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>${okhttp.version}</version>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.httpcomponents.client5</groupId>
+            <artifactId>httpclient5</artifactId>
+            <version>${apache.http.client.version}</version>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-client</artifactId>
+            <version>${jetty.client.version}</version>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-web-client</artifactId>
+            <version>${vertx.version}</version>
+            <optional>true</optional>
+        </dependency>
 
         <!--
             Dependencies for testing.
@@ -89,6 +122,13 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.27</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -132,6 +172,15 @@
                 <plugin>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.22.1</version>
+                    <configuration>
+                        <argLine>
+                            --add-modules
+                            okhttp3,org.eclipse.jetty.client,org.slf4j
+                            --add-reads
+                            com.zerodeplibs.webpush=okhttp3 --add-reads
+                            com.zerodeplibs.webpush=org.eclipse.jetty.client
+                        </argLine>
+                    </configuration>
                     <executions>
                         <execution>
                             <id>default-test</id>
